Olvide agregar la direccion del git de la pagina de inicio, por ende vuelvo a subir los archivos

--- a/plataforma/css/inicio.css
+++ b/plataforma/css/inicio.css
@@ -7,7 +7,7 @@
 /*encabezzado*/
 
 .encabezado{
-	background-image: url("inicio/fondo.gif");
+	background-image: url("../inicio/fondo.gif");
 	background-size: cover;
 	height: 650px;
 	
