--- a/plataforma/css/menu.css
+++ b/plataforma/css/menu.css
@@ -280,6 +280,9 @@ font-size: 50px;
     box-shadow: 0 0 10px rgb(0,0,0,.4);
 
 }
+#x-buscador{
+	cursor: pointer;
+}
 
 #ctn-bars-search input{
     display: block;
