--- a/css/menu.css
+++ b/css/menu.css
@@ -133,6 +133,7 @@ nav .enlaces a{
 	color: #FDAD30;
 	font-size: 20px;
 	text-align: center;
+	cursor: pointer;
 
 }
 .nav-icon3{
@@ -143,6 +144,7 @@ nav .enlaces a{
 	color: #069CCC;
 	font-size: 20px;
 	text-align: center;
+	cursor: pointer;
 
 }
 .tex_icon_menu{
