--- a/Plataforma/templates/principal/contacto.html
+++ b/Plataforma/templates/principal/contacto.html
@@ -1,6 +1,12 @@
 {% extends 'principal/menu.html' %}
 {% block title %}Contacto{% endblock %}
+{% block links %}
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='principal/css/select2.css') }}">
+	<script src="{{ url_for('static', filename='principal/js/jquery-3.1.1.min.js') }}" ></script>
+	<script src="{{ url_for('static', filename='principal/js/select2.js') }}"></script>
+{% endblock %}
 {% block content %}
+
 		<!-----------------------------------------------Encabezado---------------------------------------------------------------------->
 		<div class="encabezado-Contacto">
 			<div>
@@ -34,7 +40,21 @@
 							<input type="text" placeholder="Nombre del rector"   name="nameRector">
 							<input type="text" placeholder="Correo electronico"  name="email">
 							<input type="text" placeholder="Numero telefonico"  name="telefono">
-							<input type="text" placeholder="Nombre de la institución"  name="nameInstitucion">
+							<!--<input type="text" placeholder="Nombre de la institución"  name="nameInstitucion">-->
+							<script type="text/javascript">
+								$(document).ready(function(){
+										$('#mibuscador').select2();
+								});
+							</script>
+
+							<div style="width: 500px; ">
+								<select id="mibuscador" style="width: 500px;">
+									<option> Institución</option>
+									{%for ied in institucion %}
+										<option value="">{{ied.0}}</option>
+									{%endfor%}
+								</select>
+							</div>
 							<input type="text" placeholder="Código DANE"  name="codDane">
 							<input type="text" placeholder="Municipio"  name="municipio">
 							<input type="text" placeholder="Numero de usuarios"  name="numUsuarios">
