--- a/Plataforma/templates/principal/contacto.html
+++ b/Plataforma/templates/principal/contacto.html
@@ -1,9 +1,9 @@
 {% extends 'principal/menu.html' %}
 {% block title %}Contacto{% endblock %}
 {% block links %}
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='principal/css/select2.css') }}">
+<!--	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='principal/css/select2.css') }}">
 	<script src="{{ url_for('static', filename='principal/js/jquery-3.1.1.min.js') }}" ></script>
-	<script src="{{ url_for('static', filename='principal/js/select2.js') }}"></script>
+	<script src="{{ url_for('static', filename='principal/js/select2.js') }}"></script> -->
 {% endblock %}
 {% block content %}
 
