--- a/Plataforma/templates/principal/menu.html
+++ b/Plataforma/templates/principal/menu.html
@@ -537,7 +537,7 @@
 
 	</footer>
 	<script src="{{ url_for('static', filename='principal/js/menu.js') }}"></script>
-	<!--<script src="{{ url_for('static', filename='principal/js/jquery.js') }}"></script>-->
+	<script src="{{ url_for('static', filename='principal/js/jquery.js') }}"></script>
 	
 
 
