--- a/Plataforma/templates/principal/menu.html
+++ b/Plataforma/templates/principal/menu.html
@@ -21,10 +21,6 @@
 	<script src="https://kit.fontawesome.com/242df0cab7.js" crossorigin="anonymous"></script>
 	<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(136817)</script>
 	<link rel="icon" type="image/png" href="{{ url_for('static', filename='principal/img/bombillo.png') }}" sizes="32x32">
-
-<!-- pruebaaa</!-->
-	{% block links %}
-	{% endblock %}
 </head>
 <body class="hidden"  >
 	
@@ -537,7 +533,7 @@
 
 	</footer>
 	<script src="{{ url_for('static', filename='principal/js/menu.js') }}"></script>
-	<!--<script src="{{ url_for('static', filename='principal/js/jquery.js') }}"></script>-->
+	<script src="{{ url_for('static', filename='principal/js/jquery.js') }}"></script>
 	
 
 
