Ruta 404 asignada, verificacion de datos con la bdd en el formulario contacto realizada, falta enviar correo con datos previamente cargados

--- a/Plataforma/templates/principal/contacto.html
+++ b/Plataforma/templates/principal/contacto.html
@@ -45,7 +45,7 @@
 							<input type="text" placeholder="Numero telefonico"  name="telefono">
 							<input type="text" placeholder="Nombre de la institución"  name="nameInstitucion">
 							<input type="text" placeholder="Código DANE"  name="codDane">
-							<input type="text" placeholder="Municipio"  name="municipio">
+							<input type="text" placeholder="Departamento"  name="departamento">
 							<input type="text" placeholder="Numero de usuarios"  name="numUsuarios">
 							<input type="text" placeholder="Comentarios adicionales"  name="comentarios">
 							<div class="contenedor_boton_enviar">
