--- a/Plataforma/templates/principal/Registro_institucion.html
+++ b/Plataforma/templates/principal/Registro_institucion.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 
 	<!--Estilo CSS-->
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='principal/css/registro_institucion.css.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='principal/css/registro_institucion.css') }}">
 	<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(136817)</script>
 	<link rel="icon" type="image/png" href="{{ url_for('static', filename='principal/img/bombillo.png') }}" sizes="32x32">
 </head>
