--- a/Plataforma/templates/principal/error404.html
+++ b/Plataforma/templates/principal/error404.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Error</title>
-	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='principal/css/eror.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='principal/css/error404.css') }}">
 	<link rel="icon" type="image/png" href="{{ url_for('static', filename='principal/img/bombillo.png') }}" sizes="32x32">
 
 </head>
