--- a/Plataforma/templates/principal/contacto.html
+++ b/Plataforma/templates/principal/contacto.html
@@ -1,13 +1,5 @@
 {% extends 'principal/menu.html' %}
 {% block title %}Contacto{% endblock %}
-<<<<<<< HEAD
-=======
-{% block links %}
-<!--	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='principal/css/select2.css') }}">
-	<script src="{{ url_for('static', filename='principal/js/jquery-3.1.1.min.js') }}" ></script>
-	<script src="{{ url_for('static', filename='principal/js/select2.js') }}"></script> -->
-{% endblock %}
->>>>>>> c6aa8726e1cceff636d42e396f4adf1d8feb1233
 {% block content %}
 
 		<!-----------------------------------------------Encabezado---------------------------------------------------------------------->
@@ -52,16 +44,16 @@
 								<input type="submit" class="boton_FI" placeholder="Enviar">	
 							</div>
 						</fieldset>
+						<!--captura mensajes del servidor -->
+						{% with messages = get_flashed_messages() %} 
+						{% if messages %}
+						{%for mesage in messages %}
+							<p class="tituloF_Contactos">{{ mesage }}</p>
+						{% endfor %}
+						{% endif %}
+						{% endwith %}
 					</form>
 					<!--Fin formulario-->
-					<!--captura mensajes del servidor -->
-					{% with messages = get_flashed_messages() %} 
-					{% if messages %}
-					{%for mesage in messages %}
-						<p>{{ mesage }}</p>
-					{% endfor %}
-					{% endif %}
-					{% endwith %}
 				</div>
 				<!--Fin contenedor formulario-->
 			 </div>
