--- a/Plataforma/templates/principal/index.html
+++ b/Plataforma/templates/principal/index.html
@@ -32,7 +32,7 @@
 						</div>
 
 					<div class="boton">
-							<button class="r cta3">Registrarse</button>
+							<button class="r abrir-Usuario2">Registrarse</button>
 						</div>
 					<img class="logo2" src="{{ url_for('static', filename='principal/img/10.png') }}">
 				</div>
@@ -82,7 +82,7 @@
 				
 			</div>
 
-			<p class="incrips">¿Quieres inscribir tu Institución? <a class="link" target="_blank" href="contacto.html">Formulario de Incripción</a> </p>
+			<p class="incrips">¡Registrate ahora!</p>
 
 			
 		</section>
@@ -178,25 +178,8 @@
 			
 			<div class="contenedor-3">
 
-				<div class="usuarios">
-
-					<div class="">
-						<img class="imu" src="{{ url_for('static', filename='principal/img/18.png') }}">
-					</div>
-					<div >
-						<br><p class="textou" >Institución</p>
-					</div>
-					
-				</div>
-				<div class="usuarios">
-					<div class="">
-						<img class="imu" src="{{ url_for('static', filename='principal/img/19.png') }}">
-					</div>
-					<div >
-						<br><p class="textou" >Directivos</p>
-					</div>
-					
-				</div>
+				
+				
 
 				<div class="usuarios">
 					<div class="">
