--- a/Plataforma/templates/principal/menu.html
+++ b/Plataforma/templates/principal/menu.html
@@ -37,7 +37,6 @@
 				</div>
 				<div class="Contenedor-Enlaces__Menú" id="Enlaces"><!--Contendor Enlaces de navegación del menú-->
 					<a href="nosotros"    class="btn-header">NOSOTROS</a>
-					<a href="insti"   class="btn-header">INSTITUCIÓN</a>
 					<a href="usuarios"   class="btn-header">USUARIOS</a>
 					<a href="herramientas"   class="btn-header">HERRAMIENTAS</a>
 					<a href="contacto"  class="btn-header">CONTACTO</a>
@@ -110,11 +109,7 @@
 			Chat Bot
 			</a>
 		</li>
-		<li>
-			<a href="insti.html" target="_blank"><i  class="fas fa-search"></i>
-			Institución Pionera 
-			</a>
-		</li>
+		
 		<li>
 			<a href="bot.html" target="_blank"><i  class="fas fa-search"></i>
 			Iniciar Sesion 
@@ -436,6 +431,7 @@
 	<script src="{{ url_for('static', filename='principal/js/menu.js') }}"></script>
 	<script src="{{ url_for('static', filename='principal/js/jquery.js') }}"></script>
 	
+	<script src="{{ url_for('static', filename='principal/js/inicio.js') }}"></script>
 
 
 
