--- a/Plataforma/static/principal/css/registro.css
+++ b/Plataforma/static/principal/css/registro.css
@@ -313,13 +313,13 @@
 }
 
 .entradaDos{
-	background-image: url(principal/img/35.png);
+	background-image: url(../img/35.png);
 	background-position: 0px 0px;
 	background-repeat: no-repeat;
 	padding-left: 40px ;
 }
 .entrad{
-  background-image: url(principal/img/36.png);
+  background-image: url(../img/36.png);
    background-position: 0px 0px;
    background-repeat: no-repeat;
     padding-left: 40px ;
